# Mnsx-ValkyrieHub

./: .gitignore  .~工业视觉智能检测平台.md  工业视觉智能检测.md
SQL/: create_table_sql.sql  table_create_sql.sql
ValkyrieHub-Client/: CMakeLists.txt  main.cpp
ValkyrieHub-Client/include/core/: HubClient.h
ValkyrieHub-Client/include/core/process/: CameraOperator.h
ValkyrieHub-Client/include/utils/: NetworkDetector.h
ValkyrieHub-Client/src/core/: HubClient.cpp
ValkyrieHub-Client/src/core/process/: CameraOperator.cpp
ValkyrieHub-Server/: CMakeLists.txt  main.cpp
ValkyrieHub-Server/include/core/: HubServer.h  QtMethodDispatcher.h
ValkyrieHub-Server/include/dao/: ClusterManageDao.h  DefectRecordDao.h  SystemLogDao.h
ValkyrieHub-Server/include/service/: ClusterManageService.h  DataReportService.h  DefectRecordService.h  SystemLogService.h
ValkyrieHub-Server/include/utils/: Base64Utils.h  FileUtils.h  MySQLUtils.h
ValkyrieHub-Server/src/core/: HubServer.cpp  QtMethodDispatcher.cpp
ValkyrieHub-Server/src/dao/: ClusterManageDao.cpp  DefectRecordDao.cpp  SystemLogDao.cpp
ValkyrieHub-Server/src/service/: ClusterManageService.cpp  DataReportService.cpp  DefectRecordService.cpp  SystemLogService.cpp
ValkyrieHub-Server/src/utils/: MySQLUtils.cpp  MySQLUtils.h
